src/objects/OM_Location__c.object
<CustomObject>
    <description>For storing locations (deliver to)</description>
    <fields>
        <fullName>OM_Attention__c</fullName>
        <label>Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Carrier_Type__c</fullName>
        <label>Carrier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OM_Carrier_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Delivery_Comment__c</fullName>
        <label>Delivery Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OM_Delivery_Location_Account_Number__c</fullName>
        <label>Delivery Location Account Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Delivery_Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Location Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delivery Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Department_Name__c</fullName>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Facility_Account_Number__c</fullName>
        <description>Account number from related facility</description>
        <formula>OM_Facility__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Facility_Address__c</fullName>
        <description>Pulls in billing address from related facility</description>
        <formula>OM_Facility__r.ShippingStreet + BR() +
 OM_Facility__r.ShippingCity + BR() +
 OM_Facility__r.ShippingState + &quot; &quot; +  OM_Facility__r.ShippingPostalCode + BR() +
 OM_Facility__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Facility_County__c</fullName>
        <formula>OM_Facility__r.OM_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Facility_Latitude__c</fullName>
        <formula>OM_Facility__r.Geolocation__Latitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Facility_Longitude__c</fullName>
        <formula>OM_Facility__r.Geolocation__Longitude__s</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Facility_Street_Address_Search__c</fullName>
        <description>Hidden field to facilitate searching on address for delivery locations</description>
        <label>Facility Street Address - Search</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Facility__c</fullName>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Facility</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OM_Freight_Billing__c</fullName>
        <label>Freight Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Location_ID__c</fullName>
        <label>Location ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_MDM_Facility_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM Facility ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_MDM_ID__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_OMAR_ID__c</fullName>
        <externalId>true</externalId>
        <label>OMAR ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Omni_ID__c</fullName>
        <externalId>true</externalId>
        <label>OMNI ID</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_P_O_Box__c</fullName>
        <formula>OM_Facility__r.OM_Billing_PO_Box__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P.O. Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Picking_Label__c</fullName>
        <label>Picking Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code B</fullName>
                </value>
                <value>
                    <fullName>Code Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OM_Delivery_Location_Account_Number__c</columns>
        <columns>OM_Facility__c</columns>
        <columns>OM_Facility_Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>